--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://kit.fontawesome.com/2db3b3669b.js" crossorigin="anonymous"></script>
     <meta name="theme-color" content="#ffffff">
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <!-- Page loading styles-->
     <style>
       .page-loading {
@@ -106,13 +106,6 @@
     <!-- Main Theme Styles + Bootstrap-->
     <link rel="stylesheet" media="screen" href="asset/css/theme.min.css">
     <!-- Google Tag Manager-->
-    <script>
-      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-WKV3GT5');
-    </script>
   </head>
   <!-- Body-->
   <body>
@@ -136,7 +129,7 @@
             <div class="offcanvas-body">
               <!-- Menu-->
               <ul class="navbar-nav">
-                <li class="nav-item active"><a class="nav-link" href="#">Home</a>
+                <li class="nav-item active"><a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#">Sejarah</a>
                 </li>
@@ -193,10 +186,10 @@
             </div>
           </div>
           <div class="tns-carousel-inner" data-carousel-options="{&quot;items&quot;: 3, &quot;nav&quot;: false, &quot;gutter&quot;: 23, &quot;responsive&quot;: {&quot;0&quot;:{&quot;items&quot;:1},&quot;540&quot;:{&quot;items&quot;:2},&quot;900&quot;:{&quot;items&quot;:3}}}">
-            <div class="pb-2"><a class="card border-0 shadow card-hover mx-1" href="#">
-                <div class="card-img-top card-img-gradient"><img src="https://around.createx.studio/img/demo/booking/offers/01.jpg" alt="Burano"><span class="card-floating-text text-light fw-medium">Lihat<i class="fas fa-chevron-right align-middle fs-lg ms-1"></i></span></div>
+            <div class="pb-2"><a class="card border-0 shadow card-hover mx-1" href="andha buddha.html">
+                <div class="card-img-top card-img-gradient"><img src="asset/img/4-disebut-ondo-budho-karena-cover.jpg" alt="Burano"><span class="card-floating-text text-light fw-medium">Lihat<i class="fas fa-chevron-right align-middle fs-lg ms-1"></i></span></div>
                 <div class="card-body text-center">
-                  <h3 class="h5 pt-1 mb-3">Burano</h3>
+                  <h3 class="h5 pt-1 mb-3">Andha Budha</h3>
                 </div></a></div>
             <div class="pb-2"><a class="card border-0 shadow card-hover mx-1" href="#">
                 <div class="card-img-top card-img-gradient"><img src="https://around.createx.studio/img/demo/booking/offers/02.jpg" alt="New York"><span class="card-floating-text text-light fw-medium">Lihat<i class="fas fa-chevron-right align-middle fs-lg ms-1"></i></span></div>
@@ -264,7 +257,7 @@
                 </h2>
                 <div class="accordion-collapse collapse show" id="faq-content-1" aria-labelledby="faq-heading-1" data-bs-parent="#faq">
                   <div class="accordion-body">
-                    <div class="fs-sm">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</div>
+                    <div class="fs-sm">Desa Sikunang berasal dari kata “Si” dan “Kunang” yang berarti bercahaya atau bersinar. Sikunang sendiri memiliki arti sesuatu yang bercahaya. Nama Sikunang diambil berdasarkan kisah pada zaman dahulu Ketika ada mata air yang debitnya melimpah, sehingga banyak terdapat kunang-kunang di sekitarnya. Mata air tersebut terletak di sebelah timur Dusun Sikunang.</div>
                   </div>
                 </div>
               </div>
@@ -294,7 +287,7 @@
                 </h2>
                 <div class="accordion-collapse collapse" id="faq-content-4" aria-labelledby="faq-heading-4" data-bs-parent="#faq">
                   <div class="accordion-body">
-                    <div class="fs-sm">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</div>
+                    <div class="fs-sm"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31664.282282232187!2d109.88108333126465!3d-7.236815091664764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e700c7c4edcbab9%3A0x5027a76e3557200!2sSikunang%2C%20Kejajar%2C%20Kabupaten%20Wonosobo%2C%20Jawa%20Tengah!5e0!3m2!1sid!2sid!4v1637316726370!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
                   </div>
                 </div>
               </div>
