--- a/gunung.html
+++ b/gunung.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Telaga Silewek</title>
+    <title>Gunung Bisma</title>
     <!-- Viewport-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon and Touch Icons-->
@@ -154,16 +154,16 @@
       <!-- Page content-->
       <!-- Hero-->
       <section class="jarallax bg-dark py-7" data-jarallax data-speed="0.25">
-        <div class="jarallax-img" style="background-image: url(asset/img/4-disebut-ondo-budho-karena.jpg);  background-color: rgba(200,100,0,.5); background-blend-mode: multiply;"></div>
+        <div class="jarallax-img" style="background-image: url(asset/img/Panorama-Sindoro-dan-Sumbing-dari-Gunung-Bismo.jpg);  background-color: rgba(200,100,0,.5); background-blend-mode: multiply;"></div>
         <div class="container py-5 py-sm-7 text-center">
           <div class="py-md-6">
-            <h1 class="font-weight-bold text-light pb-1">Andha Budha</h1>
+            <h1 class="font-weight-bold text-light pb-1">Gunung Bisma</h1>
           </div>
         </div>
       </section>
       <!-- FAQ-->
       <section class="container py-5 my-4 my-sm-0 py-sm-6 py-md-7">
-        <h2 class="text-center pb-2 mb-5">Seputar Andha Budha</h2>
+        <h2 class="text-center pb-2 mb-5">Seputar Gunung Bisma</h2>
         <div class="row pb-2">
           <div class="col-lg-6">
             <div class="accordion" id="faq">
@@ -173,7 +173,7 @@
                 </h2>
                 <div class="accordion-collapse collapse" id="faq-content-1" aria-labelledby="faq-heading-1" data-bs-parent="#faq">
                   <div class="accordion-body">
-                    <div class="fs-sm">Andha Budha merupakan sebuah tangga kesucian. Sesuai artinya yakni “Andha” yang berarti tangga dan “Budha” yang berarti kesucian. Andha Budha menghubungkan Telaga Cebong dengan Dieng, terdapat pemandangan alam, batu-batu kuno yang merupakan peninggalan sejarah dan berpotensi menjadi agro-wisata. </div>
+                    <div class="fs-sm">Di antara objek wisata lainnya, kawasan wisata Gunung Bismo merupakan objek wisata yang memiliki daya tarik paling kuat karena paling banyak terekspose dan letaknya tidak jauh dari Kawasan wisata Dataran Tinggi Dieng, serta salah satu rutenya melewati Kawasan Desa Sikunang.</div>
                   </div>
                 </div>
               </div>
@@ -183,7 +183,7 @@
                 </h2>
                 <div class="accordion-collapse collapse show" id="faq-content-4" aria-labelledby="faq-heading-4" data-bs-parent="#faq">
                   <div class="accordion-body">
-                    <div class="fs-sm"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3958.137315180319!2d109.908619!3d-7.2251745!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e700d657a246255%3A0x1b155b70d8f4663a!2sSitus%20Ondo%20Budha!5e0!3m2!1sen!2sid!4v1637477633896!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+                    <div class="fs-sm"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4513.475284436058!2d109.89992118512026!3d-7.228372951160573!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e700c7c4edcbab9%3A0x5027a76e3557200!2sSikunang%2C%20Kejajar%2C%20Wonosobo%20Regency%2C%20Central%20Java!5e0!3m2!1sen!2sid!4v1638408848989!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
                   </div>
                 </div>
               </div>
