--- a/index.html
+++ b/index.html
@@ -131,17 +131,22 @@
               <ul class="navbar-nav">
                 <li class="nav-item active"><a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="#">Sejarah</a>
+                <li class="nav-item"><a class="nav-link" href="#detail">Sejarah</a>
                 </li>
-                <li class="nav-item dropdown dropdown-mega"><a class="nav-link" href="#" data-bs-toggle="dropdown">Wisata</a>
+                <li class="nav-item dropdown dropdown-mega"><a class="nav-link" href="#wisata" data-bs-toggle="dropdown">Wisata</a>
                   <div class="dropdown-menu">
                     <div class="dropdown-column mb-2 mb-lg-0">
-                     <a class="dropdown-item" href="#">Test</a>
-                    </div>
+                     <a class="dropdown-item" href="andha buddha.html">Andha buddha</a>
+                      <a class="dropdown-item" href="telaga.html">Telaga Silewek</a>
+                      <a class="dropdown-item" href="bukit.html">Bukit Sarinah</a>
+                      <a class="dropdown-item" href="batu.html">Batu Lik-Lik</a>
+                      <a class="dropdown-item" href="Gunung.html">Gunung Bisma</a>
+                     </div>
                   </div>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="#">Kondisi Geografis</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Populasi</a></li>
+                <li class="nav-item"><a class="nav-link" href="#detail">Kegiatan Kemasyarakatan</a></li>
+                <li class="nav-item"><a class="nav-link" href="#detail">Kondisi Geografis</a></li>
+                <li class="nav-item"><a class="nav-link" href="#detail">Populasi</a></li>
               </ul>
             </div>
           </div>
@@ -154,7 +159,6 @@
         <div class="container py-5 py-sm-7 text-center">
           <div class="py-md-6">
             <h1 class="font-weight-bold text-light pb-1">Explore Sikunang</h1>
-            <p class="fs-lg text-light">Tagline disini</p>
           </div>
         </div>
       </section>
@@ -176,7 +180,7 @@
         </div>
       </form>
       <!-- Offers carousel-->
-      <section class="container py-5 my-4 my-sm-0 py-sm-6 py-md-7">
+      <section class="container py-5 my-4 my-sm-0 py-sm-6 py-md-7" id="wisata">
         <h2 class="text-center mb-4">Destinasi Wisata</h2>
         <div class="tns-carousel-wrapper">
           <div class="tns-carousel-progress ms-auto mb-3">
@@ -187,66 +191,36 @@
           </div>
           <div class="tns-carousel-inner" data-carousel-options="{&quot;items&quot;: 3, &quot;nav&quot;: false, &quot;gutter&quot;: 23, &quot;responsive&quot;: {&quot;0&quot;:{&quot;items&quot;:1},&quot;540&quot;:{&quot;items&quot;:2},&quot;900&quot;:{&quot;items&quot;:3}}}">
             <div class="pb-2"><a class="card border-0 shadow card-hover mx-1" href="andha buddha.html">
-                <div class="card-img-top card-img-gradient"><img src="asset/img/4-disebut-ondo-budho-karena-cover.jpg" alt="Burano"><span class="card-floating-text text-light fw-medium">Lihat<i class="fas fa-chevron-right align-middle fs-lg ms-1"></i></span></div>
+                <div class="card-img-top card-img-gradient"><img src="asset/img/4-disebut-ondo-budho-karena-cover.jpg" alt="Andha"><span class="card-floating-text text-light fw-medium">Lihat<i class="fas fa-chevron-right align-middle fs-lg ms-1"></i></span></div>
                 <div class="card-body text-center">
                   <h3 class="h5 pt-1 mb-3">Andha Budha</h3>
                 </div></a></div>
-            <div class="pb-2"><a class="card border-0 shadow card-hover mx-1" href="#">
-                <div class="card-img-top card-img-gradient"><img src="https://around.createx.studio/img/demo/booking/offers/02.jpg" alt="New York"><span class="card-floating-text text-light fw-medium">Lihat<i class="fas fa-chevron-right align-middle fs-lg ms-1"></i></span></div>
+            <div class="pb-2"><a class="card border-0 shadow card-hover mx-1" href="telaga.html">
+                <div class="card-img-top card-img-gradient"><img src="asset/img/Keindahan-Alam-Telaga-Warna.-Foto-Gmap-tyo-koconegoro-cover.jpg" alt="Telaga"><span class="card-floating-text text-light fw-medium">Lihat<i class="fas fa-chevron-right align-middle fs-lg ms-1"></i></span></div>
                 <div class="card-body text-center">
-                  <h3 class="h5 pt-1 mb-3">New York</h3>
+                  <h3 class="h5 pt-1 mb-3">Telaga Silewek</h3>
                 </div></a></div>
-            <div class="pb-2"><a class="card border-0 shadow card-hover mx-1" href="#">
-                <div class="card-img-top card-img-gradient"><img src="https://around.createx.studio/img/demo/booking/offers/03.jpg" alt="Maldives"><span class="card-floating-text text-light fw-medium">Lihat<i class="fas fa-chevron-right align-middle fs-lg ms-1"></i></span></div>
+            <div class="pb-2"><a class="card border-0 shadow card-hover mx-1" href="bukit.html">
+                <div class="card-img-top card-img-gradient"><img src="asset/img/1200px-Bukit_Holbung_di_Siang_Hari-cover.jpg" alt="Bukit"><span class="card-floating-text text-light fw-medium">Lihat<i class="fas fa-chevron-right align-middle fs-lg ms-1"></i></span></div>
                 <div class="card-body text-center">
-                  <h3 class="h5 pt-1 mb-3">Maldives</h3>
+                  <h3 class="h5 pt-1 mb-3">Bukit Sarinah</h3>
                 </div></a></div>
-            <div class="pb-2"><a class="card border-0 shadow card-hover mx-1" href="#">
-                <div class="card-img-top card-img-gradient"><img src="https://around.createx.studio/img/demo/booking/offers/04.jpg" alt="Buenos Aires"><span class="card-floating-text text-light fw-medium">Lihat<i class="fas fa-chevron-right align-middle fs-lg ms-1"></i></span></div>
+            <div class="pb-2"><a class="card border-0 shadow card-hover mx-1" href="batu.html">
+                <div class="card-img-top card-img-gradient"><img src="asset/img/rock-mountains-nature-hd-wallpaper-preview-cover.jpg" alt="Buenos Aires"><span class="card-floating-text text-light fw-medium">Lihat<i class="fas fa-chevron-right align-middle fs-lg ms-1"></i></span></div>
                 <div class="card-body text-center">
-                  <h3 class="h5 pt-1 mb-3">Buenos Aires</h3>
+                  <h3 class="h5 pt-1 mb-3">Batu Lik-lik</h3>
                 </div></a></div>
-            <div class="pb-2"><a class="card border-0 shadow card-hover mx-1" href="#">
-                <div class="card-img-top card-img-gradient"><img src="https://around.createx.studio/img/demo/booking/offers/05.jpg" alt="Rome"><span class="card-floating-text text-light fw-medium">Lihat<i class="fas fa-chevron-right align-middle fs-lg ms-1"></i></span></div>
+            <div class="pb-2"><a class="card border-0 shadow card-hover mx-1" href="gunung.html">
+                <div class="card-img-top card-img-gradient"><img src="asset/img/Panorama-Sindoro-dan-Sumbing-dari-Gunung-Bismo-cover.jpg" alt="Rome"><span class="card-floating-text text-light fw-medium">Lihat<i class="fas fa-chevron-right align-middle fs-lg ms-1"></i></span></div>
                 <div class="card-body text-center">
-                  <h3 class="h5 pt-1 mb-3">Rome</h3>
+                  <h3 class="h5 pt-1 mb-3">Gunung Bisma</h3>
                 </div></a></div>
           </div>
         </div>
       </section>
       <!-- Features CTA-->
-      <section class="bg-gradient position-relative pt-6 pb-5 py-sm-6">
-        <div class="position-absolute top-0 start-0 w-100 h-100 bg-size-cover" style="background-image: url(img/demo/booking/bg-pattern01.png);"></div>
-        <div class="position-relative zindex-5 container py-2">
-          <div class="row align-items-center">
-            <div class="col-lg-5 offset-lg-1 order-lg-2 pb-5 pb-lg-0 text-center text-lg-start">
-              <h2 class="text-light">Ada Apa Saja di Desa Sikunang?</h2>
-              <p class="text-light mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-            </div>
-            <div class="col-lg-6 order-lg-1">
-              <div class="row">
-                <div class="col-sm-4 mb-2 pb-4 mb-sm-0 pb-sm-0">
-                  <div class="px-2 text-center"><img class="bg-light rounded-circle mb-2" src="https://around.createx.studio/img/demo/booking/icons/01.svg" alt="Tickets" width="105">
-                    <p class="fs-sm fw-medium text-light mb-0 pt-1">Lorem ipsum </p>
-                  </div>
-                </div>
-                <div class="col-sm-4 mb-2 pb-4 mb-sm-0 pb-sm-0">
-                  <div class="px-2 text-center"><img class="bg-light rounded-circle mb-2" src="https://around.createx.studio/img/demo/booking/icons/02.svg" alt="Search" width="105">
-                    <p class="fs-sm fw-medium text-light mb-0 pt-1">Lorem ipsum</p>
-                  </div>
-                </div>
-                <div class="col-sm-4 mb-2 pb-4 mb-sm-0 pb-sm-0">
-                  <div class="px-2 text-center"><img class="bg-light rounded-circle mb-2" src="https://around.createx.studio/img/demo/booking/icons/03.svg" alt="Flight" width="105">
-                    <p class="fs-sm fw-medium text-light mb-0 pt-1">Lorem ipsum</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
       <!-- FAQ-->
-      <section class="container py-5 my-4 my-sm-0 py-sm-6 py-md-7">
+      <section class="container py-5 my-4 my-sm-0 py-sm-6 py-md-7" id="detail">
         <h2 class="text-center pb-2 mb-5">Seputar Sikunang</h2>
         <div class="row pb-2">
           <div class="col-lg-6">
@@ -263,11 +237,25 @@
               </div>
               <div class="accordion-item shadow">
                 <h2 class="accordion-header" id="faq-heading-2">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2" aria-expanded="false" aria-controls="faq-content-2">Potensi Alam</button>
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2" aria-expanded="false" aria-controls="faq-content-2">Kondisi Geografis</button>
                 </h2>
                 <div class="accordion-collapse collapse" id="faq-content-2" aria-labelledby="faq-heading-2" data-bs-parent="#faq">
                   <div class="accordion-body">
-                    <div class="fs-sm">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</div>
+                    <div class="fs-sm">Desa Dieng merupakan salah satu dari 15 desa dan 1 kelurahan di Kecamatan Kejajar Kabupaten Wonosobo yang terletak di sebelah utara kota Wonosobo dengan jarak dengan ibu kota kecamatan sejauh 9 km dan jarak dengan ibu kota Kabupaten Wonosobo 27 km yang dapat ditempuh menggunakan kendaraan bermotor selama 45 menit.
+
+                      Desa Dieng terletak pada ketinggian 2.093 meter dari permukaan air laut, (DPL) sedangkan topografisnya berada disebelah barat lereng gunung prahu dengan suhu udara 20-30⁰ Celcius pada siang hari dan 05-180⁰  Celcius pada malam hari lebih lebih dimusim kemarau ( antara bulan Juli s/d September ) udara di dieng sangat dingin sampai mines 5⁰ – 00⁰ sampai menimbulkan Frozz/embun beku orang Dieng menyebutnya Embun Upas. Serta curah hujan rata rata sebanyak 348 mm dengan jumlah bulan hujan sebanyak 8 bulan.
+                      
+                      Desa Dieng memiliki luas wilayah 282.000. Ha, yang secara administratif terbagi menjadi  2 (dua) dusun yaitu Dusun Dieng dan Dusun Kalilembu, serta ada 2 RW dan 8 RT.</div>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item shadow">
+                <h2 class="accordion-header" id="faq-heading-2">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2" aria-expanded="false" aria-controls="faq-content-2">Kegiatan Kemasyarakatan</button>
+                </h2>
+                <div class="accordion-collapse collapse" id="faq-content-2" aria-labelledby="faq-heading-2" data-bs-parent="#faq">
+                  <div class="accordion-body">
+                    <div class="fs-sm">Mayoritas masyarakat Desa Sikunang mata pencahariannya sebagai petani, kemudian beberapa masyarakat lainnya menjadi pelaku UMKM. Tanaman-tanaman yang menjadi fokus para petani yakni Purwaceng, Kentang, Karika, Terong Belanda, Kopi, dan Jeruk, sementara untuk pelaku UMKM ada yang membuka homestay atau penginapan bagi wisatawan, serta menjual hasil pertaniannya. Untuk kegiatan keagamaan, mayoritas masyarakat Desa Sikunang beragama Islam, dengan organisasi nya adalah Anshor, Fatayat, dan Muslimat. Organisasi yang ada di Desa Sikunang terdiri dari beberapa sector dan kegiatan, diantaranya bagi ibu-ibu ada PKK, PKD, Bidan, Kader, dan Posbindu. Bagi para remaja, ada organisasi KPSM (Kelompok Pengelola Sampah Masyarakat) yang berfokus pada pengelolaan sampah, Basecamp Pendakian Gunung Bismo yang berfokus pada egistrasi dan pelayanan bagi para pendaki yang ingin mendaki wisata Gunung Bismo, kemudian POKDARWIS yakni Kelompok Sadar Wisata yang berfokus pada kawasan wisata di sekitar Desa Sikunang. </div>
                   </div>
                 </div>
               </div>
@@ -277,7 +265,7 @@
                 </h2>
                 <div class="accordion-collapse collapse" id="faq-content-3" aria-labelledby="faq-heading-3" data-bs-parent="#faq">
                   <div class="accordion-body">
-                    <div class="fs-sm">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</div>
+                    <div class="fs-lg"><i class="fas fa-mars"></i><b>  Laki-Laki :</b>1.148 jiwa<br><br><i class="fas fa-venus"></i><b>  Perempuan :</b>1.103 jiwa</div>
                   </div>
                 </div>
               </div>
@@ -302,7 +290,6 @@
         <div class="position-relative zindex-5 container pb-3 pt-sm-2">
           <div class="mx-auto" style="max-width: 460px;">
             <h2 class="text-light text-center pt-sm-2">Kritik dan Saran</h2>
-            <p class="text-light text-center mb-grid-gutter">Lorem ipsum</p>
             <form class="input-group mb-4">
               <input class="form-control" type="email" placeholder="Masukkan e-mail" required>
               <button class="btn btn-success" type="submit"><i class="fas fa-send fs-xl me-1"></i></button>
