--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                       <a class="dropdown-item" href="telaga.html">Telaga Silewek</a>
                       <a class="dropdown-item" href="bukit.html">Bukit Sarinah</a>
                       <a class="dropdown-item" href="batu.html">Batu Lik-Lik</a>
-                      <a class="dropdown-item" href="Gunung.html">Gunung Bisma</a>
+                      <a class="dropdown-item" href="gunung.html">Gunung Bisma</a>
                      </div>
                   </div>
                 </li>
